{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 12,
  "lineage": "d8cadeef-7a33-cbc5-76b8-e08bd7803e4c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00e801948462f718a",
            "arn": "arn:aws:ec2:us-east-1:737679990230:instance/i-0b823c38fe5e0bb2c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b823c38fe5e0bb2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cd38b4bb85da1ffc"
              }
            ],
            "primary_network_interface_id": "eni-0cd38b4bb85da1ffc",
            "private_dns": "ip-172-31-27-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.87",
            "public_dns": "ec2-34-227-8-10.compute-1.amazonaws.com",
            "public_ip": "34.227.8.10",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0064bec52506ebb17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095d48ba81e984c7e",
            "tags": {
              "Name": "prod-server"
            },
            "tags_all": {
              "Name": "prod-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f74cf768039a1ad5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990230",
            "id": "i-0b823c38fe5e0bb2c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990230:internet-gateway/igw-04118c3b63620bc77",
            "id": "igw-04118c3b63620bc77",
            "owner_id": "737679990230",
            "region": "us-east-1",
            "tags": {
              "Name": "My_igw"
            },
            "tags_all": {
              "Name": "My_igw"
            },
            "vpc_id": "vpc-03b480102be395092"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990230",
            "id": "igw-04118c3b63620bc77",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990230:route-table/rtb-096f21e4d7d6c9158",
            "id": "rtb-096f21e4d7d6c9158",
            "owner_id": "737679990230",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04118c3b63620bc77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_RouteTable"
            },
            "tags_all": {
              "Name": "My_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b480102be395092"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990230",
            "id": "rtb-096f21e4d7d6c9158",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw1",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c383f989c565c96f",
            "region": "us-east-1",
            "route_table_id": "rtb-096f21e4d7d6c9158",
            "subnet_id": "subnet-068a8c54e0aec8b9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990230",
            "id": "rtbassoc-0c383f989c565c96f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw1",
            "aws_route_table.my_rt1",
            "aws_subnet.my_subnet1",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990230:security-group/sg-0c7cd6fb2243c5c78",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7cd6fb2243c5c78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "737679990230",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My_SG"
            },
            "tags_all": {
              "Name": "My_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b480102be395092"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990230",
            "id": "sg-0c7cd6fb2243c5c78",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990230:subnet/subnet-068a8c54e0aec8b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068a8c54e0aec8b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737679990230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "My_Subnet"
            },
            "tags_all": {
              "Name": "My_Subnet"
            },
            "vpc_id": "vpc-03b480102be395092"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990230",
            "id": "subnet-068a8c54e0aec8b9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737679990230:vpc/vpc-03b480102be395092",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a6f079f949ff3ec",
            "default_route_table_id": "rtb-0adf04617a6131445",
            "default_security_group_id": "sg-0489525a005325a24",
            "dhcp_options_id": "dopt-0c0e8e2852e032747",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b480102be395092",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adf04617a6131445",
            "owner_id": "737679990230",
            "region": "us-east-1",
            "tags": {
              "Name": "My_VPC"
            },
            "tags_all": {
              "Name": "My_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "737679990230",
            "id": "vpc-03b480102be395092",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}